[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gen_timeseries"
readme = "README.md"
license = { file = "LICENSE" }
version = "0.0.1"
requires-python = ">=3.10"

[tool.hatch.build.targets.wheel]
packages = ["src/gen_timeseries"]

[tool.isort]
known_third_party = ["wandb"]
